// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Inset > handles 0 value 1`] = `
{
  "classNames": [
    "_--inset_a9394a",
  ],
  "variables": {
    "--rs-inset-s": 0,
  },
}
`;

exports[`Styles/Inset > handles positive value 1`] = `
{
  "classNames": [
    "_--inset_a9394a",
  ],
  "variables": {
    "--rs-inset-s": 4,
  },
}
`;

exports[`Styles/Inset > handles responsive value 1`] = `
{
  "classNames": [
    "_--inset_a9394a",
    "_--inset--m_a9394a",
    "_--inset--l_a9394a",
  ],
  "variables": {
    "--rs-inset-l": 2,
    "--rs-inset-m": 0,
    "--rs-inset-s": 4,
  },
}
`;

exports[`Styles/Inset > handles undefined value 1`] = `null`;

exports[`Styles/Inset > handles value width defined side 1`] = `
{
  "classNames": [
    "_--inset-start_a9394a",
  ],
  "variables": {
    "--rs-inset-start-s": 4,
  },
}
`;
